Alteracoes  - Acrescimo preco tabela/model Produto  - criados arquivos frontend produto  - testes iniciais de Ajax

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/javascript.js"></script>
+  
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script type="text/javascript" src="js/javascript.js"></script>
 
 </head>
 
@@ -164,7 +165,10 @@
     </div>
   </div>  
 </div>   
-
+  <script type="text/javascript" src="js/produto/Produto.js"></script>
+  <script type="text/javascript" src="js/produto/ProdutoService.js"></script>
+  <script type="text/javascript" src="js/produto/ProdutoController.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
 
