--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,11 @@
   
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="js/javascript.js"></script>
+  <script type="text/javascript" src="js/produto/Produto.js"></script>
+  <script type="text/javascript" src="js/produto/HttpHelper.js"></script>
+  <script type="text/javascript" src="js/produto/ProdutoService.js"></script>
+  <script type="text/javascript" src="js/produto/ProdutoController.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 
 </head>
 
@@ -165,10 +170,7 @@
     </div>
   </div>  
 </div>   
-  <script type="text/javascript" src="js/produto/Produto.js"></script>
-  <script type="text/javascript" src="js/produto/ProdutoService.js"></script>
-  <script type="text/javascript" src="js/produto/ProdutoController.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+
 </body>
 </html>
 
