--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="js/produto/HttpHelper.js"></script>
   <script type="text/javascript" src="js/produto/ProdutoService.js"></script>
   <script type="text/javascript" src="js/produto/ProdutoController.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 
 </head>
 
