--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -16,9 +16,9 @@
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/javascript.js"></script>
-<script type="text/javascript" src="js/produto/Produto.js"></script>
-<script type="text/javascript" src="js/produto/HttpHelper.js"></script>
-<script type="text/javascript" src="js/produto/ProdutoService.js"></script>
+<script type="text/javascript" src="js/item/Produto.js"></script>
+<script type="text/javascript" src="js/item/HttpHelper.js"></script>
+<script type="text/javascript" src="js/item/ItemPedidoService.js"></script>
 
 
 </head>
@@ -108,7 +108,7 @@
 	</div>
 </body>
 
-<script type="text/javascript" src="js/produto/ProdutoController.js"></script>
+<script type="text/javascript" src="js/item/ItemPedidoController.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </html>
 
