Correeção inclusao de tens

--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -86,7 +86,7 @@
 											<input id="quant" name="quant" id="quant" class="text"
 												style="text-align: center" size="1" type="text" value="0"
 												maxlength="5" /> <input type="button" id="minus" value='+'
-												onclick="process(1)">
+												onclick="aumentaQuantidade(1)">
 										</div> </font>
 									</td>
 								</tr>
