--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -82,7 +82,7 @@
 										<div data-app="product.quantity" id="quantidade">
 											<span id="span_erro_carrinho" class="blocoAlerta"
 												style="display: none;">Selecione uma opção produto</span> <input
-												type="button" id="plus" value='-' onclick="process(-1)" />
+												type="button" id="plus" value='-' onclick="aumentaQuantidade(-1)" />
 											<input id="quant" name="quant" id="quant" class="text"
 												style="text-align: center" size="1" type="text" value="0"
 												maxlength="5" /> <input type="button" id="minus" value='+'
