parte inicial itens finalizada; iniciada tela de carrinho

--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -16,10 +16,6 @@
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/javascript.js"></script>
-<script type="text/javascript" src="js/item/Produto.js"></script>
-<script type="text/javascript" src="js/item/HttpHelper.js"></script>
-<script type="text/javascript" src="js/item/ItemPedidoService.js"></script>
-
 
 </head>
 
@@ -108,7 +104,10 @@
 	</div>
 </body>
 
+<script type="text/javascript" src="js/item/Produto.js"></script>
+<script type="text/javascript" src="js/item/HttpHelper.js"></script>
+<script type="text/javascript" src="js/item/ItemPedidoService.js"></script>
 <script type="text/javascript" src="js/item/ItemPedidoController.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/itens.js"></script>
 </html>
 
