--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -7,12 +7,9 @@
 <title>Catálogo de Produtos</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/javascript.js"></script>
@@ -34,7 +31,7 @@
 		<!--Div do scroll -->
 
 
-		<a href="carrinho.html" class="list-group-item"> <!--Sera outro modal -->
+		<a href="carrinho2.html" class="list-group-item"> <!--Sera outro modal -->
 			<table bgcolor="grey">
 				<tbody>
 					<tr>
