--- a/src/main/resources/static/carrinho2.html
+++ b/src/main/resources/static/carrinho2.html
@@ -80,10 +80,10 @@
 									<td id="cel1">
 										<div data-app="product.quantity" id="quantidade">
 											<span id="span_erro_carrinho" class="blocoAlerta" style="display: none;">Selecione uma opção produto</span> 
-												<input type="button" id="plus" value='-' onclick="aumentaQuantidade(-1)" /> 
+												<input type="button" id="btnMinus" value='-'" /> 
 												<input id="quant" name="quant" id="quant" class="text" style="text-align: center" size="1" type="text" value="1"
 													maxlength="5" onclick="aumentaQuantidade(1)"/> 
-												<input type="button" id="minus" value='+' onclick="aumentaQuantidade(1)">
+												<input type="button" id="btnPlus" value='+'>
 										</div>
 									</td>
 								</tr>
