--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -29,9 +29,7 @@
 		</div>
 		
 		<!--Div do scroll -->
-
-
-		<a href="carrinho2.html" class="list-group-item" id="lnkCarrinho"> <!--Sera outro modal -->
+		<a class="list-group-item" id="lnkCarrinho"> <!--Sera outro modal -->
 			<table bgcolor="grey">
 				<tbody>
 					<tr>
@@ -42,8 +40,15 @@
 				</tbody>
 			</table>
 		</a>
-
-
+		
+		<button class="list-group-item" id="btnCarrinho">
+			<div class="row"style="padding: 10px">
+				<div class="col-md-1">CARRINHO</div>
+				<div class="col-md-2" style="color:red; padding-left:25px;">R$ 1.000,00</div>
+				<div class="col-md-4"></div>
+				<div class="col-md-5"></div>
+			</div>
+		</button>
 
 	</div>
 	<!--Div do containner -->
